--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   db:
     image: postgres:12.0
+    container_name: conids-db
     environment:
       POSTGRES_DB: mspurchasing
       POSTGRES_USER: mspurchasing
@@ -14,11 +15,13 @@ services:
 
   redis:
     image: redis:3.2.8
+    container_name: conids-redis
     ports:
       - 6379:6379
 
   mspurchasing:
     build: ./mspurchasing
+    container_name: conids-backend
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./mspurchasing:/code
@@ -30,7 +33,8 @@ services:
 
   mswebclient:
     build: ./mswebclient
-    command: npm run serve
+    container_name: conids-frontend
+    command: npm run dev
     volumes:
       - ./mswebclient:/code
     ports:
