--- a/mswebclient/package.json
+++ b/mswebclient/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mswebclient",
-  "version": "0.0.0",
+  "version": "1.20.3",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 5173",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
