--- a/mswebclient/package.json
+++ b/mswebclient/package.json
@@ -15,7 +15,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0",
     "pinia": "^2.0.36",
+    "popper.js": "^1.16.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
